--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       border-radius: 20px;
       border: 5px solid #ff8f8f;
       margin-top: 10px;
+      transform: scaleX(-1); /* MIRROR EFFECT */
     }
     #countdown {
       font-size: 6rem;
@@ -88,6 +89,111 @@
 
 <canvas id="canvas" style="display:none;"></canvas>
 
-<script src="script.js"></script>
+<script>
+let video = document.getElementById('video');
+let canvas = document.getElementById('canvas');
+let ctx = canvas.getContext('2d');
+let countdownEl = document.getElementById('countdown');
+let flash = document.getElementById('flash');
+let photostrip = document.getElementById('photostrip');
+let countdownTime = document.getElementById('countdownTime');
+let templateImage = null;
+
+// Camera access
+navigator.mediaDevices.getUserMedia({ video: true })
+  .then(stream => {
+    video.srcObject = stream;
+  })
+  .catch(err => {
+    console.error('Camera access denied', err);
+  });
+
+// Handle template upload
+document.getElementById('templateUpload').addEventListener('change', (e) => {
+  const file = e.target.files[0];
+  if (!file) return;
+  const reader = new FileReader();
+  reader.onload = function(event) {
+    templateImage = new Image();
+    templateImage.src = event.target.result;
+  }
+  reader.readAsDataURL(file);
+});
+
+// Start photobooth session
+async function startPhotoSession() {
+  let countdown = parseInt(countdownTime.value);
+
+  while (countdown > 0) {
+    countdownEl.textContent = countdown;
+    await new Promise(res => setTimeout(res, 1000));
+    countdown--;
+  }
+
+  countdownEl.textContent = '';
+  takePhoto();
+}
+
+// Take a photo
+function takePhoto() {
+  flashScreen();
+
+  // Set canvas size
+  canvas.width = video.videoWidth;
+  canvas.height = video.videoHeight;
+
+  // Mirror the context
+  ctx.save();
+  ctx.translate(canvas.width, 0);
+  ctx.scale(-1, 1);
+
+  // Draw video frame
+  ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+  ctx.restore();
+
+  // If template uploaded, draw template behind
+  if (templateImage) {
+    ctx.drawImage(templateImage, 0, 0, canvas.width, canvas.height);
+  }
+
+  let imgUrl = canvas.toDataURL('image/png');
+  let img = document.createElement('img');
+  img.src = imgUrl;
+  photostrip.appendChild(img);
+}
+
+// Flash effect
+function flashScreen() {
+  flash.style.display = 'block';
+  setTimeout(() => {
+    flash.style.display = 'none';
+  }, 100);
+}
+
+// Download all photos
+function downloadPhotostrip() {
+  const images = photostrip.querySelectorAll('img');
+  if (images.length === 0) return;
+
+  const downloadCanvas = document.createElement('canvas');
+  const ctx = downloadCanvas.getContext('2d');
+  const imgWidth = images[0].width;
+  const imgHeight = images[0].height;
+  const gap = 20;
+  downloadCanvas.width = imgWidth;
+  downloadCanvas.height = (imgHeight + gap) * images.length - gap;
+
+  images.forEach((img, index) => {
+    ctx.drawImage(img, 0, index * (imgHeight + gap), imgWidth, imgHeight);
+  });
+
+  const link = document.createElement('a');
+  link.download = 'photostrip.png';
+  link.href = downloadCanvas.toDataURL();
+  link.click();
+}
+</script>
+
 </body>
 </html>
