--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
     }
     #video {
       width: 600px;
+      max-width: 90vw;
       border-radius: 20px;
       border: 5px solid #ff8f8f;
       margin-top: 10px;
-      transform: scaleX(-1); /* MIRROR EFFECT */
+      transform: scaleX(-1); /* Mirror effect */
+      object-fit: cover;
     }
     #countdown {
       font-size: 6rem;
@@ -80,7 +82,7 @@
 
 <div id="flash"></div>
 <div id="countdown"></div>
-<video id="video" autoplay playsinline></video><br>
+<video id="video" autoplay playsinline muted></video><br>
 
 <button onclick="startPhotoSession()">Start Photobooth!</button>
 <button onclick="downloadPhotostrip()">Download Photostrip</button>
@@ -99,14 +101,19 @@ let photostrip = document.getElementById('photostrip');
 let countdownTime = document.getElementById('countdownTime');
 let templateImage = null;
 
-// Camera access
-navigator.mediaDevices.getUserMedia({ video: true })
-  .then(stream => {
-    video.srcObject = stream;
-  })
-  .catch(err => {
-    console.error('Camera access denied', err);
-  });
+// --- Correct camera access here ---
+navigator.mediaDevices.getUserMedia({
+  video: { facingMode: "user" },
+  audio: false
+})
+.then(stream => {
+  video.srcObject = stream;
+  video.play();
+})
+.catch(err => {
+  console.error('Error accessing camera:', err);
+  alert('Cannot access camera. Please allow camera permission.');
+});
 
 // Handle template upload
 document.getElementById('templateUpload').addEventListener('change', (e) => {
@@ -116,7 +123,7 @@ document.getElementById('templateUpload').addEventListener('change', (e) => {
   reader.onload = function(event) {
     templateImage = new Image();
     templateImage.src = event.target.result;
-  }
+  };
   reader.readAsDataURL(file);
 });
 
@@ -126,7 +133,10 @@ async function startPhotoSession() {
 
   while (countdown > 0) {
     countdownEl.textContent = countdown;
-    await new Promise(res => setTimeout(res, 1000));
+    countdownEl.style.transform = 'scale(1.2)';
+    await new Promise(res => setTimeout(res, 800));
+    countdownEl.style.transform = 'scale(1)';
+    await new Promise(res => setTimeout(res, 200));
     countdown--;
   }
 
@@ -149,10 +159,9 @@ function takePhoto() {
 
   // Draw video frame
   ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-
   ctx.restore();
 
-  // If template uploaded, draw template behind
+  // If template uploaded, draw it ON TOP
   if (templateImage) {
     ctx.drawImage(templateImage, 0, 0, canvas.width, canvas.height);
   }
@@ -177,7 +186,7 @@ function downloadPhotostrip() {
   if (images.length === 0) return;
 
   const downloadCanvas = document.createElement('canvas');
-  const ctx = downloadCanvas.getContext('2d');
+  const ctx2 = downloadCanvas.getContext('2d');
   const imgWidth = images[0].width;
   const imgHeight = images[0].height;
   const gap = 20;
@@ -185,7 +194,7 @@ function downloadPhotostrip() {
   downloadCanvas.height = (imgHeight + gap) * images.length - gap;
 
   images.forEach((img, index) => {
-    ctx.drawImage(img, 0, index * (imgHeight + gap), imgWidth, imgHeight);
+    ctx2.drawImage(img, 0, index * (imgHeight + gap), imgWidth, imgHeight);
   });
 
   const link = document.createElement('a');
