--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
       font-size: 6rem;
       color: #ff6e6e;
       margin: 20px 0;
-      transition: transform 0.2s;
     }
     .photo-buttons {
       margin-bottom: 30px;
@@ -106,11 +105,10 @@ let photostrip = document.getElementById('photostrip');
 let countdownTime = document.getElementById('countdownTime');
 let templateImage = null;
 let capturedPhotos = [];
-
 let mediaRecorder;
 let recordedChunks = [];
 
-// --- Access Camera ---
+// --- Camera Access ---
 navigator.mediaDevices.getUserMedia({
   video: { facingMode: "user" },
   audio: false
@@ -118,7 +116,6 @@ navigator.mediaDevices.getUserMedia({
 .then(stream => {
   video.srcObject = stream;
   video.play();
-  console.log('Camera Access Success');
 })
 .catch(err => {
   console.error('Error accessing camera:', err);
@@ -139,22 +136,18 @@ document.getElementById('templateUpload').addEventListener('change', (e) => {
 
 // --- Start Photobooth Session ---
 async function startPhotoSession() {
-  console.log('Starting Photo Session');
   capturedPhotos = [];
-  recordedChunks = [];
   photostrip.innerHTML = '';
 
-  // Start recording
+  // Start recording screen
   startRecording();
 
   for (let i = 0; i < 4; i++) {
-    console.log(`Taking photo ${i+1}`);
     await countdownAndPhoto();
-    await new Promise(res => setTimeout(res, 500)); // slight wait after photo
+    await new Promise(res => setTimeout(res, 1000)); // small wait after photo
   }
 
   stopRecording();
-  console.log('Session Finished');
 }
 
 // --- Countdown and Take Photo ---
@@ -174,7 +167,6 @@ async function countdownAndPhoto() {
 
 // --- Take a Photo ---
 function takePhoto() {
-  console.log('Taking a photo...');
   flashScreen();
 
   canvas.width = video.videoWidth;
@@ -190,11 +182,11 @@ function takePhoto() {
     ctx.drawImage(templateImage, 0, 0, canvas.width, canvas.height);
   }
 
-  const imgUrl = canvas.toDataURL('image/png');
+  let imgUrl = canvas.toDataURL('image/png');
   capturedPhotos.push(imgUrl);
 
-  // Show preview
-  const img = document.createElement('img');
+  // Preview
+  let img = document.createElement('img');
   img.src = imgUrl;
   photostrip.appendChild(img);
 }
@@ -209,41 +201,39 @@ function flashScreen() {
 
 // --- Download Photostrip ---
 function downloadPhotostrip() {
-  if (capturedPhotos.length === 0) {
-    alert('No photos to download!');
-    return;
-  }
+  if (capturedPhotos.length === 0) return;
 
-  const width = 300;
-  const height = 400; // Approximate, depends on your video size
-  const spacing = 20;
-  const totalHeight = (height + spacing) * capturedPhotos.length - spacing;
+  const img = new Image();
+  img.src = capturedPhotos[0];
+  img.onload = () => {
+    const width = img.width;
+    const height = img.height;
+    const gap = 20;
 
-  const stripCanvas = document.createElement('canvas');
-  const stripCtx = stripCanvas.getContext('2d');
-  stripCanvas.width = width;
-  stripCanvas.height = totalHeight;
+    const stripCanvas = document.createElement('canvas');
+    stripCanvas.width = width;
+    stripCanvas.height = (height + gap) * capturedPhotos.length - gap;
 
-  let loaded = 0;
-  capturedPhotos.forEach((src, index) => {
-    const img = new Image();
-    img.onload = () => {
-      stripCtx.drawImage(img, 0, index * (height + spacing), width, height);
-      loaded++;
-      if (loaded === capturedPhotos.length) {
-        const link = document.createElement('a');
-        link.download = 'photostrip.png';
-        link.href = stripCanvas.toDataURL();
-        link.click();
-      }
-    };
-    img.src = src;
-  });
+    const stripCtx = stripCanvas.getContext('2d');
+    capturedPhotos.forEach((src, index) => {
+      const photo = new Image();
+      photo.src = src;
+      photo.onload = () => {
+        stripCtx.drawImage(photo, 0, index * (height + gap), width, height);
+        if (index === capturedPhotos.length - 1) {
+          const link = document.createElement('a');
+          link.download = 'photostrip.png';
+          link.href = stripCanvas.toDataURL();
+          link.click();
+        }
+      };
+    });
+  };
 }
 
 // --- Screen Recording ---
 function startRecording() {
-  const stream = document.body.captureStream(30);
+  const stream = document.body.captureStream(30); // Capture whole page at 30 FPS
   mediaRecorder = new MediaRecorder(stream, { mimeType: 'video/webm' });
 
   mediaRecorder.ondataavailable = function(e) {
@@ -253,23 +243,15 @@ function startRecording() {
   };
 
   mediaRecorder.start();
-  console.log('Recording started...');
 }
 
 function stopRecording() {
-  if (mediaRecorder && mediaRecorder.state !== 'inactive') {
-    mediaRecorder.stop();
-    console.log('Recording stopped...');
-  }
+  mediaRecorder.stop();
 }
 
-// --- Download Session Video ---
+// --- Download the Session Video ---
 function downloadVideo() {
-  if (recordedChunks.length === 0) {
-    alert('No recording available!');
-    return;
-  }
-
+  if (recordedChunks.length === 0) return;
   const blob = new Blob(recordedChunks, { type: 'video/webm' });
   const url = URL.createObjectURL(blob);
 
@@ -278,10 +260,10 @@ function downloadVideo() {
   link.download = 'session_video.webm';
   link.click();
 
-  URL.revokeObjectURL(url);
-  recordedChunks = []; // Clear after download
+  recordedChunks = [];
 }
 </script>
 
 </body>
 </html>
+
