--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 <canvas id="canvas" style="display:none;"></canvas>
 
-<script src="photobooth.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
